<resources>
    <string name="app_name">eTour</string>
    <string name="user_name">TextView</string>
    <string name="Register_Button">Button</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login_password">*******</string>
    <string name="email_address">email address</string>
    <string name="account_password">account password</string>
    <string name="homebutton">homeButton</string>
    <string name="profile">profile</string>
    <string name="search">search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookings">bookings</string>
    <string name="home">HOME</string>
    <string name="Search">SEARCH</string>
    <string name="Bookings">BOOKINGS</string>
    <string name="Profile">PROFILE</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="Create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="minimum_password" />
    <string name="auth_failed" />
    <string name="tvTextView1">TextView</string>
    <string name="second_name">Second Name</string>
    <string name="first_name">First Name</string>
    <string name="profileInfo">profileInfo</string>
    <string name="sign_out">Sign out</string>
    <string name="my_bookings">My bookings</string>
    <string name="cancelled_bookings">Cancelled bookings</string>
    <string name="safaris_com">Safaris.com</string>
    <string name="textview">TextView</string>
    <string name="rating">rating</string>
    <string name="destinationLocation">location</string>
    <string name="destinatin_name">destinatin name</string>
    <string name="price">price</string>
    <string name="destination_view">destination View</string>
    <string name="available_safaris">Available Safaris</string>
    <string name="safaris_name">safaris name</string>
    <string name="package_description">package description</string>
    <string name="safaris">safaris</string>
    <string name="get_in_touch_with_your_tour_travel_service_providers">get in touch with your tour/travel service providers.</string>
    <string name="search_button">searchButton</string>
    <string name="home_button" />
    <string name="account">Account</string>
    <string name="my_account_info">My account info</string>
    <string name="log_in_instead">Log in </string>
    <string name="forgot_my_password">Forgot my password</string>
    <string name="sign_up_instead">SIGN UP</string>
    <string name="account_login">Account Login</string>
    <string name="account_sign_up">Account sign up</string>
    <string name="forgot_your_password_don_t_worry_we_ll_send_an_email_with_reset_details">Forgot your password? Don\'t worry we\'ll send an email with reset details</string>
    <string name="reset">RESET</string>
    <string name="reset_password">Reset Password</string>
    <string name="reseticon">resetIcon</string>
    <string name="account_email_address">account email address</string>
    <string name="back">Back</string>
    <string name="reserve_booking">Reserve Booking</string>
    <string name="location_picture">location picture</string>
    <string name="mombasa">Mombasa</string>
    <string name="credit_card_visa">Credit Card/Visa</string>
    <string name="paypal">PayPal</string>
    <string name="lipa_na_mpesa">Lipa na Mpesa</string>
    <string name="continue_to_paypal">Continue to PayPal</string>
    <string name="paypalText">fghghjhkkjkjkjhjjgjjhjhjhjhjhjhhkhkh bbbbbbbbbbbbbbbbbbbbbbmmmmmmmmmmmmmmmmmmmmmmmmmmmm hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh</string>
    <string name="continue_to_the_checkout_using_paypal">Continue to the checkout using PayPal</string>
    <string name="pay">PAY</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="pay_with_mpesa">Pay with Mpesa</string>
    <string name="searchDestination">Search</string>
    <string name="location">location</string>
    <string name="locdescription">locdescription</string>
    <string name="mpesa_no_e_g_0712345678">mpesa No e.g 0712345678</string>
    <string name="amount">Amount</string>
</resources>
