<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragPayPal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bolder"
    tools:context=".PayPalFrag">

    <EditText
        android:id="@+id/tvPayPal"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bolder"
        android:text="@string/continue_to_the_checkout_using_paypal"
        android:textAlignment="center"
        android:textStyle="bold"
        android:inputType="phone"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnPayPal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/adamina"
        android:text="@string/continue_to_paypal"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_paymentAmount"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bolder"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/amount"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />
</FrameLayout>