<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileFrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e1f5fe"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bookingsToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e1f5fe"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_back"
            android:background="#e1f5fe"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/adamina"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:text="@string/account"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/my_account_info"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:contentDescription="@string/profileInfo"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/tvFname"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="#eceff1"
            android:text="" />

        <TextView
            android:id="@+id/tvProfileId"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="#eceff1"
            android:text="" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/sign_out"
        android:textColor="#fafafa" />
</LinearLayout>