<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e1f5fe"
    tools:context=".PasswordResetActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="161dp"
        android:layout_height="94dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="9dp"
        android:contentDescription="@string/reseticon"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_password_reset" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="199dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/merienda"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="387dp"
        android:layout_height="46dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/adamina"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/forgot_your_password_don_t_worry_we_ll_send_an_email_with_reset_details"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_ResetPassEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_ResetPassEmail"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="101dp"
        android:drawableStart="@drawable/email"
        android:layout_marginBottom="292dp"
        android:background="#eceff1"
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:hint="@string/account_email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_Reset"
        android:layout_width="371dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/reset"
        android:textColor="#fafafa"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ResetPassEmail" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="69dp"
        android:layout_height="22dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Reset"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvBackNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="341dp"
        android:layout_marginBottom="14dp"
        android:clickable="true"
        android:focusable="true"
        android:drawableStart="@drawable/ic_back"
        android:fontFamily="@font/merienda"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Reset" />

</androidx.constraintlayout.widget.ConstraintLayout>