<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bolder"
    tools:context=".MpesaFrag">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frag_mpesa"
        android:layout_width="match_parent"
        android:layout_height="745dp">

        <TextView
            android:id="@+id/editText"
            android:layout_width="303dp"
            android:layout_height="50dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="168dp"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="77dp"
            android:ems="10"
            android:fontFamily="@font/adamina"
            android:text="@string/pay_with_mpesa"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_primary_variant"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/etPhoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="303dp"
            android:layout_height="50dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="77dp"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="400dp"
            android:background="@drawable/bolder"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_amount"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="301dp"
            android:layout_height="49dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="331dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/pay"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="299dp"
            android:layout_height="51dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="66dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/bolder"
            android:ems="10"
            android:hint="@string/mpesa_no_e_g_0712345678"
            android:inputType="phone"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/etPhoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            android:autofillHints="" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>